--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Resumify",
+  "name": "resumify",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/proxy": "^2.1.0",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.12.1"
+    "@nuxtjs/vuetify": "^1.12.1",
+    "vuex": "^3.6.2"
   }
 }
